--- a/src/Crud.Api/appsettings.json
+++ b/src/Crud.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=54320;Database=mydb;Username=postgres;Password=password"
+        "DefaultConnection": "Server=localhost,1433;Database=crud;User Id=sa;Password=passwordinappsettings;"
     }
 }
