--- a/src/Tests/Crud.UnitTests/Crud.UnitTests.csproj
+++ b/src/Tests/Crud.UnitTests/Crud.UnitTests.csproj
@@ -6,4 +6,15 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Crud.Application\Crud.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentAssertions" Version="6.12.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+      <PackageReference Include="NSubstitute" Version="5.1.0" />
+      <PackageReference Include="xunit.core" Version="2.7.0" />
+    </ItemGroup>
+
 </Project>
