--- a/src/Tests/Crud.UnitTests/Crud.UnitTests.csproj
+++ b/src/Tests/Crud.UnitTests/Crud.UnitTests.csproj
@@ -8,10 +8,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Crud.Application\Crud.Application.csproj" />
+      <ProjectReference Include="..\..\Crud.Infrastructure\Crud.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoFixture" Version="4.18.1" />
       <PackageReference Include="FluentAssertions" Version="6.12.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.2" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
       <PackageReference Include="NSubstitute" Version="5.1.0" />
       <PackageReference Include="xunit.core" Version="2.7.0" />
