feat: docker file

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,16 +1,18 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
+WORKDIR /
 COPY ["Crud.Api/Crud.Api.csproj", "Crud.Api/"]
+COPY ["Crud.Infrastructure/Crud.Infrastructure.csproj", "Crud.Infrastructure/"]
+COPY ["Crud.Application/Crud.Application.csproj", "Crud.Application/"]
+COPY ["Crud.Domain/Crud.Domain.csproj", "Crud.Domain/"]
 RUN dotnet restore "Crud.Api/Crud.Api.csproj"
 COPY . .
-WORKDIR "/src/Crud.Api"
+WORKDIR "/Crud.Api"
 RUN dotnet build "Crud.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
@@ -21,8 +23,3 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Crud.Api.dll"]
-
-
-
-
-#docker run -e "ACCEPT_EULA=Y" -e "SA_PASSWORD=passwordinappsettings" -p 1433:1433 --name crud -d mcr.microsoft.com/mssql/server
